# aethermind_workspace

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  institutional_compliance_badge.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  python-ci.yml
docs/: proprietary_license.md
orchestrator/: pyproject.toml
src/aethermind_workspace/: config.py  main.py
src/build_process_engine/: lifecycle.py
