[tool.poetry]
name = "aethermind-orchestrator"
version = "0.1.0"
description = "AetherMind AI Orchestrator core service"
authors = ["Ward’s Way Enterprises <info@wardsway.com>"]
packages = [
  { include = "orchestrator", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
